css/app.css
/*css file for portfolio site*/
body {
  display: flex;
  flex-wrap: wrap;
}

.openingContainter {
  display: flex;
  flex-wrap: wrap;
  height: 98vh;
}

.mainPic {
  width: 60%;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-wrap: wrap;
}

#pic {
  border-radius: 25px;
  font-family: sans-serif;
  font-size: 2em;
  font-weight: bold;
  width: 70%;
}

.menu {
  display: flex;
  flex-wrap: wrap;
  width: 40%;
  align-items: center;
}

#name {
  font-family: verdana;
  width: 100%;
  padding-top: 10%;
  text-align: center;
}

.makeSpace {
  width: 100%;
  display: flex;
  justify-content: center;
}

.menu img {
  align-self: center;
}

.menu a {
  color: black;
  padding: 5%;
  text-decoration: none;
  height: 3%;
  font-family: sans-serif;
}

.menu a:hover {
  background-color: black;
  border-radius: 5px;
  color: white;
  font-weight: bold;
}

.menu a.active {
  background-color: black;
}

.about {
  display: flex;
  flex-wrap: wrap;
  font-family: verdana;
  height: 75vh;
  justify-content: center;
  align-items: center;
  margin-top: 1.5%;
}

#imHere, #youreHere{
  width: 100%;
  text-align: center;
  align-content: center;
  line-height: 1.5;
}
.leaves {
  display: flex;
  width: 100%;
  justify-content: center;
  justify-content: space-around;
}

.leaves img {
  width: 35px;
  height: 32px;
}

#imHere  h2 {
  font-size: 1.5em;
}

#imHere {
  color: #e5ad3d;
}

#youreHere {
  color: #16425b;
}

.products {
  margin-top: 5%;
  height: 40%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  font-family: verdana;
  background: #16425b;
}

#leftSide {
  width: 60%;
  display: flex;
  justify-content: space-around;
  background: #f7b83b;
  align-items: center;
}

.text {
  display: flex;
  width: 60%;
  flex-direction: column;
  margin-left: 5%;
}

.text h1 {
  width: 100%;
}

#leftSide img {
  height: auto;
  padding: 2%;
}

#rightSide {
  width: 40%;
  display: flex;
  align-items: stretch;
  flex-grow: 1;
  background: #16425b;
  color: white;
  flex-direction: column;
  height: inherit;

}

#footer {
  margin-top: 2.5%;
  background: #0f364c;
  color: white;
  text-decoration: none;
  height: 45px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: verdana;
}

#footer a {
  text-decoration: none;
  font-weight: bold;
  color: white;
}

/*media queries*/
@media only screen and (min-width: 490px) and (max-width: 580px) {
  .openingContainter {
    height: 55vh;
    justify-content: center;
    align-items: center;
  }
  .mainPic {
    order: 2;
    height: 30%;
    width: 100%;
  }
  #pic {
    height: 80px;
    width: 80px;
    margin-top: 0px;
  }
  .menu {
    order: 0;
    width: 100%;
  }
  .makeSpace {
    margin-top: 0px;
  }
  .about {
    width: 70%;
    padding-left: 15%;
    height: 100vh;
    margin: 5% 0 5% 0;
  }
  #imHere {
    width: 100%;
  }

  #youreHere {
    width: 100%;
  }
  .products {
    flex-direction: column;
    margin-top: 20px;
  }
  #leftSide {
    width: 100%;
    order: 2;
    display: flex;
  }
  .text {
    width: 80%;
    text-align: center;
    padding-left: 5%;
  }
  .leftSide img {
    margin-left: 15%;
  }
  #rightSide {
    order: 0;
    width: 100%;
  }
  #footer {
    width: 100vh;
  }
}

@media only screen and (max-width: 489px) {
  .openingContainter {
    height: 50vh;
    justify-content: center;
    align-items: center;
  }
  .mainPic {
    order: 2;
    height: 30%;
    flex-basis: 100%;
  }
  #pic {
    height: 60px;
    width: 60px;
    margin-top: 0px;
  }
  .menu {
    order: 0;
    width: 100%;
  }
  .makeSpace {
    margin-top: 0px;
  }
  .about {
    padding-top: 2%;
    flex-basis: 100%;
    display: flex;
    flex-wrap: wrap;
  }
  #imHere {
    margin-top: 10%;
  }
  #youreHere {
    margin-bottom: 100px;
  }
  #leftSide {
    width: 100%;
    order: 2;
    display: flex;
    margin-top: 10%;
  }
  .text {
    width: 80%;
    text-align: center;
    padding-left: 5%;
  }
  .leftSide img {
    margin-left: 15%;
  }
  #rightSide {
    order: 0;
    width: 100%;
  }

}
350px - 488px

